--- a/Views/index.erb
+++ b/Views/index.erb
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
+
 <html>
+
   <head>
+
+    <meta charset="utf-8">
     <title>Thermostat</title>
-    <script src="src/thermostat.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="src/interface.js"></script>
-    <link rel='stylesheet' type='text/css' href='style/style.css'>
+    <script src="js/interface.js"></script>
+    <script src="js/thermostat.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel='stylesheet' type='text/css' href='/stylesheets/style.css'>
+
   </head>
+
   <body>
+
     <header class="box">
       <div class="enter-city-container">
         <input type="text" id="city-name" placeholder="  Enter your city">
         <button id="change-city">Submit</button>
       </div>
     </header>
+    
     <div class="temperature-controls box">
       <button id="temperature-up"></button>
       <h1 id="temperature"></h1>
@@ -26,6 +34,7 @@
       <button id="temperature-reset">reset</button>
       <button id="powersaving-off">PSM off</button>
     </div>
+
     <footer class="box">
       <div class="weather-city-container">
         <h3 id="weather-city"></h3>
@@ -35,5 +44,7 @@
         </p>
       </div>
     </footer>
+    
   </body>
+
 </html>
