Add persistent state

--- a/Views/index.erb
+++ b/Views/index.erb
@@ -26,13 +26,14 @@
     <div class="temperature-controls box">
       <button id="temperature-up"></button>
       <h1 id="temperature"></h1>
-      <button id="temperature-down">-</button>
+      <button id="temperature-down"></button>
     </div>
     <div class="energy-mode-controls box">
-      <!-- power saving mode is <span id ="power-saving-status">on</span> -->
       <button id="powersaving-on">PSM on</button>
-      <button id="temperature-reset">reset</button>
       <button id="powersaving-off">PSM off</button>
+      <p>power saving mode is <span id ="power-saving-status">on</span></p>
+
+      <button id="temperature-reset">reset</button>
     </div>
 
     <footer class="box">
